--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -715,6 +715,94 @@ section.lazy-placeholder:after {
 .cid-qTkA127IK8 {
   background-image: url("../../../assets/images/space-1593895364-179.15.2.167-2000x1125.jpg");
 }
+.cid-s3OY3YZQ6h {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+.cid-s3OY3YZQ6h .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-s3OY3YZQ6h .number-wrap {
+  color: #0f7699;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-s3OY3YZQ6h .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-s3OY3YZQ6h .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-s3OY3YZQ6h .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-s3OY3YZQ6h .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s3OY3YZQ6h .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-s3OY3YZQ6h .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-s3OY3YZQ6h .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-s3OY3YZQ6h .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-s3OY3YZQ6h .number,
+  .cid-s3OY3YZQ6h .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-s3OY3YZQ6h .period {
+    font-size: 0.8rem;
+  }
+}
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
   padding-bottom: 60px;
