--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Orbitron:400,500,600,700,800,900&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
 
 
@@ -18,7 +17,7 @@ body {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Orbitron', sans-serif;
   font-size: 3rem;
   font-display: swap;
 }
@@ -720,7 +719,7 @@ section.lazy-placeholder:after {
   padding-bottom: 90px;
 }
 .cid-s3OY3YZQ6h .mbr-section-subtitle {
-  color: #767676;
+  color: #efefef;
   font-weight: 300;
 }
 .cid-s3OY3YZQ6h .number-wrap {
